# Pill-UML

./: .gitignore  Cargo.toml  README.md
examples/: class_example.pilluml  class_example.puml  generate_diagrams.rs  sequence_example.pilluml  sequence_example.puml  style.iuml  theme.css
src/: class_diagram.rs  common.rs  default_styles.css  default_theme.css  lib.rs  sequence_diagram.rs
